fixed layout issues for mobile size

--- a/css/index.css
+++ b/css/index.css
@@ -193,7 +193,7 @@ header .signup-stylist {
 header .signup-stylist a {
   padding-right: 0.2rem;
   font-size: 1.4rem;
-  color: black;
+  color: #000000;
   text-decoration: none;
 }
 header .signup-stylist a:hover {
@@ -209,7 +209,7 @@ header .signup-client {
 header .signup-client a {
   padding-left: 0.2rem;
   font-size: 1.4rem;
-  color: black;
+  color: #000000;
   text-decoration: none;
 }
 header .signup-client a:hover {
@@ -268,7 +268,7 @@ header .signup-client a:hover {
 }
 .logo-nav .home-navbar nav a {
   padding-left: 2rem;
-  color: black;
+  color: #000000;
   text-decoration: none;
 }
 @media (max-width: 500px) {
@@ -283,6 +283,7 @@ header .signup-client a:hover {
 }
 .logo-nav .home-navbar nav .home-login {
   color: #e83e8c;
+  text-decoration: none;
 }
 .logo-nav .home-navbar nav .home-login:hover {
   color: #000000;
@@ -445,8 +446,8 @@ footer {
 }
 .bottom-content .bottom-links nav a {
   color: #000000;
-  font-size: 1.6rem;
   text-decoration: none;
+  font-size: 1.6rem;
   padding-right: 5rem;
 }
 @media (max-width: 500px) {
