--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,12 +12,10 @@ header{
         a{
             padding-right: 0.2rem;   
             font-size: 1.4rem;
-            color: black;
-            text-decoration: none;
+            .navstyle(@black; none);
             
             &:hover{
-                color: @pink;
-                text-decoration: underline;
+                .navstyle(@pink; underline);
             }//closes hover  
         }//close a
     }//closes .signup-stylist
@@ -30,12 +28,10 @@ header{
         a{
             padding-left: 0.2rem;
             font-size: 1.4rem;
-            color: black;
-            text-decoration: none; 
+            .navstyle(@black; none);
             
             &:hover{
-                color: @pink;
-                text-decoration: underline;
+                .navstyle(@pink; underline);
             }//closes hover
         }//closes a
     }//closes .signup-client
@@ -85,24 +81,21 @@ header{
             }
             a{
                 padding-left: 2rem;
-                color: black;
-                text-decoration: none;
+                .navstyle(@black; none);
                 @media @mobile{
                     padding-left: 0;
                     font-size: 8rem;
                 }
 
                 &:hover{
-                    color: @pink;
-                    text-decoration: underline;
+                    .navstyle(@pink; underline);
                 }//closes hover
             }//closes a
             .home-login{
-                color: @pink;
+                .navstyle(@pink; none);
 
                 &:hover{
-                    color: @black;
-                    text-decoration: underline;
+                    .navstyle(@black; underline);
                 }//closes hover
             }//closes .home-login
         }//closes nav
